# ai-film-studio

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: README.md
docs/: ARCHITECTURE.md  ASSET_PIPELINE.md  CHARACTER_SHEET_BATCH_WORKFLOW.md  CHARACTER_STATE_SYSTEM.md  CODING_GUIDELINES.md  PROJECT_CONTEXT.md  REFERENCE_SELECTOR_TEST.md  REFERENCE_SHEET_WORKFLOW.md  ROADMAP.md
docs/architecture/: AI_FILM_STUDIO_V3.md  ENGINE_OVERVIEW.md  PROJECT_ISOLATION.md
docs/migrations/: AI_FILM_STUDIO_V3_AUDIT.md  AI_FILM_STUDIO_V3_MIGRATION_MANIFEST.yaml
docs/policies/: ASSET_REUSE_POLICY.md  DEPICTION_POLICY.md
docs/workflows/: GENERAL_PRODUCTION_WORKFLOW.md  ISLAMIC_HISTORY_PRODUCTION_WORKFLOW.md
engine/: README.md
engine/adapters/: README.md
engine/ai_director/: README.md
engine/asset_manager/: README.md
engine/continuity_engine/: README.md
engine/episode_engine/: README.md
engine/export_engine/: README.md
engine/prompt_compiler/: README.md
engine/qa_engine/: README.md
engine/research_engine/: README.md
engine/scene_engine/: README.md
engine/shot_engine/: README.md
engine/source_validation_engine/: README.md
engine/story_engine/: README.md
projects/guriya/: README.md  asset_index.json  project.yaml
projects/insan/: README.md  project.yaml
scripts/: README.md
shared/: README.md
shared/asset_library/: README.md
shared/prompt_blocks/: README.md
shared/schemas/: project.schema.yaml  source_record.schema.yaml
shared/templates/: README.md  continuity_record.yaml  export_manifest.yaml
(+570 files in other folders)
