[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-film-studio"
version = "0.1.0"
description = "Production-grade AI filmmaking framework foundation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "AI Film Studio" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.8,<3.0",
  "Jinja2>=3.1,<4.0",
  "PyYAML>=6.0,<7.0",
  "rich>=13.7,<15.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0,<7.0"
]

[project.scripts]
ai-film-studio = "ai_film_studio.cli.app:app"
aifs = "ai_film_studio.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_film_studio = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
packages = ["ai_film_studio"]
strict = true
warn_return_any = true
warn_unused_configs = true
